# fairmind-causal-fairness-analysis

./: .coverage  .env  .gitignore  README.md  optimised_prompt_gpt.txt  pyproject.toml  zensical.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
causal (fairness)/: adult.ipynb  berkley.ipynb  functions.py  general_effects.py  libraries.py  sankey.py  toy_example.ipynb
causalfairness/: adult.ipynb  bayesian.py  berk.ipynb  berkley.ipynb  data_only.ipynb  functions.py  general_effects.py  libraries.py  prompts_onlygpt.txt  sankey.py  toy_example.ipynb  ui.py
causality/: graph.py
data/datasets/: my_data.csv
docs/: index.md
docs/api/: effects.md  index.md  model.md  sym_dsl.md  utils.md
experiments/adult/: Example5.xlsx  Example6.xlsx  report_example1.tex  report_example2.tex  report_example4.tex  report_example6.tex
experiments/student mat/: report_onlyllm.tex  report_zeroshot.tex
legacy/causalfairness/: adult.ipynb  bayesian.py  berk.ipynb  data_only.ipynb  df_filtered.csv  df_filtered.txt  fairmind_prompts.txt  functions.py  general_effects.py  libraries.py  sankey.py  toy_example.ipynb
notebooks/: adult.ipynb  adult_dataset_example_1_2_4.ipynb  adult_dataset_example_4.ipynb  adult_dataset_example_5.ipynb  adult_dataset_example_6.ipynb  b.ipynb  berkeley_dataset_example.ipynb  library_showcase.ipynb  student_mat_dataset_example.ipynb  student_mat_dataset_example_3.ipynb  symbolic.ipynb
prompts/: fairmind_prompts.txt
src/: effects.py  graph.py  llm.py  model.py  preprocess.py
src/sym/: __init__.py  ctf_calculus.py  dsl.py  effects.py
src/visualisation/: __init__.py  graph.py  sankey.py
tests/: test_graph.py  test_model.py  test_tv_decomposition.py  test_utilitarian_effects.py
ui/: app.py  app2.py  llm_analysis_only.ipynb
