[project]
name = "causal-ai-fairness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pgmpy>=1.0.0",
    "pyagrum>=2.3.0",
    "pymc>=5.26.1",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]
